image extraction and labelling working. metrics are off

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,8 +7,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
+# Copy and install dependencies first
 COPY pyproject.toml ./
-RUN pip install --no-cache-dir -e .
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -e .
 
 COPY app ./app
 
