--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,15 @@
 # Database
 DB_URL=postgresql://postgres:postgres@postgres:5432/golfcoach
 
-# AWS
+# AWS Credentials (required for S3 access)
+# Get these from AWS Console -> IAM -> Users -> Security credentials
+# Or use AWS credentials file: ~/.aws/credentials
+AWS_ACCESS_KEY_ID=your-access-key-id
+AWS_SECRET_ACCESS_KEY=your-secret-access-key
 AWS_REGION=us-east-1
-S3_BUCKET=golf-coach-videos
-USE_SSM=false
+
+# S3 Bucket (must match Terraform output - run: terraform output s3_bucket_name)
+S3_BUCKET=golf-coach-videos-dev
 
 # API Keys
 EMBEDDINGS_API_KEY=your-embeddings-api-key
