--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,10 +7,15 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
+# Create frames directory
+RUN mkdir -p /app/frames
+
 # Copy and install dependencies first
 COPY pyproject.toml ./
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -e .
+# RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+#     pip install --no-cache-dir -e .
+RUN pip install --upgrade pip setuptools wheel && \
+pip install -e .
 
 COPY app ./app
 
