--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "opencv-python>=4.8.0",
     "pandas>=2.0.0",
     "matplotlib>=3.7.0",
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
