--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,6 +2,12 @@
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["app"]
+
+[tool.setuptools.package-dir]
+"" = "."
+
 [project]
 name = "golf-swing-coach-backend"
 version = "0.1.0"
