--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,20 +1,20 @@
-# name: CI/CD
+name: CI/CD
 
-# on:
-#   pull_request:
-#     branches: [main]
-#   push:
-#     branches: [main]
+on:
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
 
-# jobs:
-#   backend-tests:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up Python
-#         uses: actions/setup-python@v5
-#         with:
-#           python-version: "3.11"
+jobs:
+  backend-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 #       - name: Install dependencies
 #         run: |
 #           cd backend
@@ -32,12 +32,12 @@
 #           cd backend
 #           pytest
 
-#   frontend-tests:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v4
+  frontend-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
 #         with:
 #           node-version: "20"
 #       - name: Install dependencies
