add more logging

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,4 +20,6 @@ RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
 
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# ... existing content ...
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info", "--access-log"]
