--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim
+FROM python:3.11
 
 # Install system libraries for ffmpeg and Postgres client
 RUN apt-get update && apt-get install -y \
