--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "sqlalchemy>=2.0.0",
-    "psycopg[binary]>=3.2.0,<3.3.0",
+    "psycopg2>=2.9.9",
     "boto3>=1.29.0",
     "alembic>=1.12.0",
     "python-multipart>=0.0.6",
